--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "student-projects-hub",
+  "name": "investo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "smoke": "node test/smoke.cjs"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
@@ -26,6 +27,8 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "@playwright/test": "^1.38.0",
+    "playwright": "^1.38.0"
   }
 }
